fix: corrected navbar scrolling function to change menu bg color after 20px to avoid content visible under transparent navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,7 +275,7 @@ body {
 /*Changes the color of the navbar on scroll*/
 .sticky-top.scrolled {
   background-color: #F6FDF8 !important;
-  transition: background-color 200ms linear;
+  transition: background-color 25ms linear;
 }
 
 .active-menu {
